syntax = "proto3";

message User {
    string username = 1;
    string public_key = 2;
}

message UserContainer {
    repeated User entries = 1;
}